# radbelt

./: .fprettify.rc  .gitignore  LICENSE  README.md  aareadme.doc  build-python.sh  build_python.sh  codecov.yml  ford.md  fpm.toml  index.html  meson.build  modules.json  radbelt.code-workspace  search.html  test.sh
app/: bilcal.f90  radbelt.f90
interface/: get_flux.html
lists/: files.html  modules.html  procedures.html  types.html
module/: core.html  radbelt_c_module.html  radbelt_kinds_module.html  radbelt_module.html  redbelt_module.html  shellig_module.html  trmfun_module.html
proc/: aep8.html  c2f_str.html  destroy_c.html  destroy_shellig_type.html  extrashc.html  feldc.html  feldcof.html  feldg.html  feldi.html  findb0.html  geo_to_cart.html  get_data_file_dir.html  get_data_file_dir~2.html  get_flux.html  get_flux_.html  get_flux_c.html  get_flux_c_.html  get_flux_g.html  get_flux_g_.html  get_flux_g_c.html  getshc.html  igrf.html  igrfc.html  initialize_c.html  int_pointer_to_f_pointer.html  intershc.html  set_data_file_dir.html  set_data_file_dir~2.html  set_data_files_paths.html  set_data_files_paths_c.html  set_igrf_file_path.html  set_igrf_file_path_c.html  set_trm_file_path.html  set_trm_file_path_c.html  shellc.html  shellg.html  stoer.html  trara1.html  trara2.html
python/: .f2py_f2cmap  environment.yml  radbeltpy.pyf
radbeltpy/: __init__.py  build_python.sh  radbeltpy.pyf
sourcefile/: core.f90.html  radbelt_c_module.f90.html  radbelt_kinds_module.f90.html  radbelt_module.f90.html  redbelt_module.f90.html  shellig.f90.html  trmfun.f90.html
(+17 files in other folders)
